crates/mys/tests/snapshots/ptb_files_tests__gas_outside_range.ptb.snap
---
source: crates/mys/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --gas-budget 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF 
   ·              ─────────────────────────────────────┬────────────────────────────────────
   ·                                                   ╰── Invalid integer literal
   ╰────

